Fixed the responsiveness of the Query Wizard, so that the editor uses word breaks and prevents the UI from snapping quickly and helps prevent bad overlapping in the accordions.

--- a/ui.frontend/src/components/IDE/core/src/editor/style/codemirror.scss
+++ b/ui.frontend/src/components/IDE/core/src/editor/style/codemirror.scss
@@ -42,6 +42,13 @@
   padding: 0;
 }
 
+.wizard-builder pre.CodeMirror-line,
+.wizard-builder pre.CodeMirror-line-like {
+  word-wrap: anywhere;
+  white-space: pre-wrap;
+  word-break: normal;
+}
+
 /* No border between gutter and editor */
 .wizard-container .CodeMirror-gutters,
 .wizard-response .CodeMirror-gutters,
